--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "webpack": "^5.16.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "snabbdom": "^2.1.0"
   }
 }
