--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^5.0.1",
+    "style-loader": "^2.0.0",
     "webpack": "^5.16.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.2"
-  },
-  "dependencies": {
-    "snabbdom": "^2.1.0"
   }
 }
