--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^5.0.1",
+    "less": "^4.1.1",
+    "less-loader": "^8.0.0",
     "style-loader": "^2.0.0",
     "webpack": "^5.16.0",
     "webpack-cli": "^3.3.12",
