--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^5.0.1",
+    "html-webpack-plugin": "^5.0.0",
     "less": "^4.1.1",
     "less-loader": "^8.0.0",
     "style-loader": "^2.0.0",
