--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^5.0.1",
+    "file-loader": "^6.2.0",
+    "html-loader": "^1.3.2",
     "html-webpack-plugin": "^5.0.0",
     "less": "^4.1.1",
     "less-loader": "^8.0.0",
     "style-loader": "^2.0.0",
+    "url-loader": "^4.1.1",
     "webpack": "^5.16.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.2"
