--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/preset-env": "^7.12.13",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
     "eslint": "^7.19.0",
     "eslint-config-airbnb-base": "^14.2.1",
@@ -47,6 +48,7 @@
     ]
   },
   "dependencies": {
+    "jquery": "^3.5.1",
     "ramda": "^0.27.1"
   }
 }
