--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "url-loader": "^4.1.1",
     "webpack": "^5.16.0",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.11.2",
+    "workbox-webpack-plugin": "^6.1.0"
   },
   "browserslist": {
     "development": [
