--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "dependencies": {
     "jquery": "^3.5.1",
-    "ramda": "^0.27.1"
+    "ramda": "^0.27.1",
+    "yaoxin-utils": "^1.0.2"
   }
 }
